--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-flask
-pytube
-moviepy
-SpeechRecognition
-pydub
-googletrans==4.0.0-rc1
+Flask
 yt-dlp
+pydub
+SpeechRecognition
+googletrans==4.0.0-rc1
